Fixed not centered pagination in mobile view in the user invoices

--- a/src/pages/Invoices/Invoices.scss
+++ b/src/pages/Invoices/Invoices.scss
@@ -23,7 +23,8 @@
   &__pagination {
     display: flex;
     justify-content: center;
-    margin: 1em;
+    // margin: 1em;
+    margin-top: 0.6em;
     font-size: 2rem;
     width: 100%;
     button {
